<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contacts_container"
    app:cardBackgroundColor="@color/white"
    android:background="@color/periwinkle"
    android:orientation="vertical"
    >
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_contact_toolbar"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:background="@color/periwinkle"
        android:layout_height="?attr/actionBarSize">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/app_name"
                android:layout_alignParentEnd="true"
                android:padding="10dp"
                android:src="@drawable/baseline_assignment_add_24"
                android:id="@+id/imageview_save"
                android:background="@android:color/transparent"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize">

            </ImageView>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginVertical="12dp"
            android:layout_marginHorizontal="12dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText_personName"
                android:inputType="text"
                android:autofillHints="name"
                android:hint="@string/person_s_name"
                android:textColorHint="@color/black"
                android:background="@color/white"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:minHeight="48dp"
                android:layout_height="wrap_content">
            </EditText>

            <EditText
                android:id="@+id/editText_companyName"
                android:inputType="text"
                android:autofillHints="name"
                android:hint="@string/company_s_name"
                android:textColorHint="@color/black"
                android:background="@color/white"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:minHeight="48dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

            <EditText
                android:id="@+id/editText_meetingLocation"
                android:inputType="text"
                android:autofillHints="name"
                android:hint="@string/meeting_location"
                android:textColorHint="@color/black"
                android:background="@color/white"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:minHeight="48dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

            <EditText
                android:id="@+id/editText_anecdotes"
                android:inputType="text"
                android:autofillHints="name"
                android:hint="@string/_3_anecdotes"
                android:textColorHint="@color/black"
                android:background="@color/white"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:minHeight="48dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

            <EditText
                android:id="@+id/editText_additional_notes"
                android:inputType="text"
                android:autofillHints="name"
                android:hint="@string/additional_notes"
                android:textColorHint="@color/black"
                android:background="@color/white"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:minHeight="48dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

        </LinearLayout>


</LinearLayout>